{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "5c543535-c9f1-4f6d-82b4-2f0ebf1aaefd",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1f0092e0-8683-4ea9-821d-97c024c5a222",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c66d3c9-784c-4c39-bb23-fc81180e4fe4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}